--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mahmudun Nabi's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section>
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span class=name-color>Mahmudun Nabi Pallob's</span> World</h1>
+            <h3> Want to be interpreater</h3>
+            <p>I like to take new challenges. I have some experience in both Electrical Engineering and Software
+                Development.</p>
+
+            <p>I am looking for a long-term innovative and challenging job position where I will have the scope to
+                utilize
+                my potentiality, adaptability,
+                and skill to do something new and effective to take forward my career as well as the organization.</p>
+            <a class="link-button" target="_blank" href=" https://www.linkedin.com/feed/">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="Nabi.png" alt="">
+        </div>
+    </section>
+
 </body>
+
 </html>
