--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class=name-color>Mahmudun Nabi Pallob's</span> World</h1>
@@ -30,6 +30,20 @@
         <div class="half-width">
             <img src="Nabi.png" alt="">
         </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>BIG DREAMER</h1>
+            <h2>Be a owner of my own company</h2>
+            <p>i want to make my own company in future.i want to make my own company in future.i want to make my own
+                company in future.i want to make my own company in future.i want to make my own company in future.i want
+                to make my own company in future.</p>
+            <a class="link-button" target="_blank">Download Resume</a>
+        </div>
+
     </section>
 
 </body>
