--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class=name-color>Mahmudun Nabi Pallob's</span> World</h1>
@@ -31,7 +31,7 @@
             <img src="Nabi.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/jhankar2.png" alt="">
         </div>
@@ -43,9 +43,33 @@
                 to make my own company in future.</p>
             <a class="link-button" target="_blank">Download Resume</a>
         </div>
-
     </section>
 
+
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stuck" class="half-width-shadow">
+                <h2 class=name-color2>Full-stack developer</h2>
+                <h3> 2022-present | Pro Level Developer </h3>
+                <p>i am a master of web developer. i am a master of web developer.i am a master of web developer.i am a
+                    master
+                    of web developer.i am a master of web developer.i am a master of web developer.i am a master of web
+                    developer.i am a master of web developer.i am a master of web developer.</p>
+            </div>
+            <div id="web-developer" class="half-width-shadow">
+                <h2 class=name-color3>Begineer web developer</h2>
+                <h3> 2016-2021 | Pro Level Developer </h3>
+                <p>i am a master of web developer. i am a master of web developer.i am a master of web developer.i am a
+                    master
+                    of web developer.i am a master of web developer.i am a master of web developer.i am a master of web
+                    developer.i am a master of web developer.i am a master of web developer.</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>@Pallob 2021, Developer.</p>
+    </footer>
 </body>
 
 </html>
